<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.miapp.MainActivity">
    <item
        android:id="@+id/acercaDe"
        android:orderInCategory="100"
        android:title="@string/label_acerca_fragment"
        app:showAsAction="never" />
    <item
        android:id="@+id/preferencias"
        android:orderInCategory="100"
        android:title="@string/label_preferencias_fragment"
        app:showAsAction="never" />
    <item
        android:id="@+id/anadir"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/label_anadir_fragment"
        app:showAsAction="always" />
</menu>