<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.miapp.MainActivity">
    <item
        android:id="@+id/iconoGeoPunto"
        android:orderInCategory="100"
        android:icon="@drawable/geo"
        android:title="@string/label_geo"
        app:showAsAction="always" />
    <item
        android:id="@+id/editarLugar"
        android:orderInCategory="100"
        android:icon="@drawable/boton_editar"
        android:title="@string/label_tercer_fragment"
        app:showAsAction="always" />
    <item
        android:id="@+id/eliminarLugar"
        android:orderInCategory="100"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/label_delete_button"
        app:showAsAction="always" />
</menu>