<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistaLugar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/nombreLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/label_editName_hint"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconoLugar"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/carrito" />

            <Spinner
                android:id="@+id/tipoLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opciones_array"
                android:layout_gravity="center"
                android:prompt="@string/seleccionar_opcion"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoDireccion"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/direccion" />

            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/label_editDirection_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoTlf"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/telefono" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/label_editPhone_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoGeo"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/geo" />

            <EditText
                android:id="@+id/longitud"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/label_editLength_hint" />
            <EditText
                android:id="@+id/latitud"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/label_editLatitude_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoUrl"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/url" />

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="URL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoComentario"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/comentario" />

            <EditText
                android:id="@+id/comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:hint="@string/label_editComment_hint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/logoFecha"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/fecha" />

            <Button
                android:id="@+id/botonFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/label_editDate_hint"
                android:textColor="@color/black"
                android:gravity="left"/>
        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:rating="2"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/kebab_sitio" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left">


                <ImageView
                    android:id="@+id/iconoCamara"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/camara" />

                <ImageView
                    android:id="@+id/iconoGaleria"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/galeria" />

                <ImageView
                    android:id="@+id/iconoEliminarFoto"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/x" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>